moonlight-rewrite/test/fixtures/CompileFail/RulePlanConstructor.hs
module RulePlanConstructor where

import Moonlight.Rewrite.Runtime (RulePlan (..))

constructorEscapes RulePlan {} = ()
